feat: Agregando controlador en donde definimos endpoints (GET y POST)

--- a/apiPersonalAdmin/appsettings.json
+++ b/apiPersonalAdmin/appsettings.json
@@ -1,9 +1,13 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*",
+
+    "ConnectionStrings": {
+        "DefaultConnection": "Server=DESKTOP-A4EN0EQ\\SQLEXPRESS;Database=apiPersonalAdmin;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
     }
-  },
-  "AllowedHosts": "*"
 }
